--- a/posts/2020-03-18-eggboxes.md
+++ b/posts/2020-03-18-eggboxes.md
@@ -1,8 +1,10 @@
 ---
-title: Blog
+title: Five things to do with egg boxes
 published_date: "2020-03-18 21:04:00 +0000"
 layout: default.liquid
 is_draft: false
+data:
+  head-img: /images/eggboxdragon.jpg
 ---
 Welcome to my blog! These are just a few ideas for activities you can do with your child to encourage them to enjoy nature. They can all be done indoors or in the garden. 
 
