--- a/posts/2020-03-18-eggboxes.md
+++ b/posts/2020-03-18-eggboxes.md
@@ -22,6 +22,8 @@ Spring is a great time to start teaching your child about caterpillars and butte
 
 Let your child decorate it however they want - you could use paints, pens or crayons, or even stick on small bits of coloured paper. Together, hunt for two small sticks about the same size, and push two holes in the head of your caterpillar to create feelers. Draw on a smiley face and, hey presto! 
 
+For more ideas on how to use egg boxes, check out this [previous blog post](https://wildberrywood.co.uk/posts/2020-03-18-eggboxes.html). 
+
 ![](/images/eggboxcaterpillar.jpg)
 
 There are lots more resources for learning about caterpillars and butterflies available from [Butterfly Conservation](https://munchingcaterpillars.org)
